--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,19 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
         </dependency>
+
+		<!-- JSTL -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<!-- JSTL实现包 -->
+		<dependency>
+			<groupId>org.apache.taglibs</groupId>
+			<artifactId>taglibs-standard-impl</artifactId>
+			<version>1.2.5</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
